--- a/scheduler/templates/main.html
+++ b/scheduler/templates/main.html
@@ -10,7 +10,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: auto;
       margin: 0;
       background-color: #f7f7f7;
       font-family: 'Arial', sans-serif;
@@ -53,7 +53,7 @@
       font-size: 16px;
       font-family: 'Arial', sans-serif;
       width: 580px;
-      min-height: 20px;
+      height: auto;
       padding: 10px;
       margin-top: 20px;
       border-radius: 8px;
@@ -193,7 +193,6 @@
             .then(response => response.json())
             .then(data => {
             const response = data.response;
-            alert(response);
             document.getElementById('responseContainer').innerText = response;
             })
             .catch(error => {
@@ -209,3 +208,4 @@
 
 </body>
 </html>
+
